--- a/Neighborly/Views/Shared/_Layout.cshtml
+++ b/Neighborly/Views/Shared/_Layout.cshtml
@@ -22,14 +22,14 @@
                     <!-- Log in and register -->
                     <div class="flex items-center gap-4">
                         <!-- Log in -->
-                        <a href="/logowanie">
+                        <a href="~/Account/Login">
                             <button class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 text-neighborly-600 bg-transparent">
                                 Zaloguj się
                             </button>
                         </a>
 
                         <!-- REgister -->
-                        <a href="/rejestracja">
+                        <a href="/Account/Register">
                             <button class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2">
                                 Zarejestruj się
                             </button>
