--- a/Neighborly/Views/Shared/Listings_layout.cshtml
+++ b/Neighborly/Views/Shared/Listings_layout.cshtml
@@ -6,7 +6,7 @@
     <title>Neighborly</title>
     <link rel="stylesheet" href="~/css/output.css" />
 </head>
-<body>
+<body bg-gray-100>
     <header class="bg-white border-b border-gray-200 sticky top-0 z-50">
         <div class="neighborly-container mx-auto px-4 max-w-screen-xl">
             <div class="flex justify-between items-center py-4">
