new buttons and working login

--- a/Neighborly/Views/Account/Myaccount.cshtml
+++ b/Neighborly/Views/Account/Myaccount.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Moje konto";
     var userListings = Model;
+    Layout = "~/Views/Shared/Listings_layout.cshtml";
 }
 
 <div class="space-y-6">
