--- a/Neighborly/Views/Shared/Listings_layout.cshtml
+++ b/Neighborly/Views/Shared/Listings_layout.cshtml
@@ -60,14 +60,14 @@
             </svg>
         </a>
         <!-- Notifications -->
-        <a class="inline-flex items-center justify-center gap-2 whitespace-nowrap ink-0 hover:bg-accent hover:text-accent-foreground h-10 w-10" href="/powiadomienia">
+        <a class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 hover:bg-accent hover:text-accent-foreground h-10 w-10" href="/powiadomienia">
             <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
                 <path d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9z" />
                 <path d="M10.3 21a1.94 1.94 0 0 0 3.4 0" />
             </svg>
         </a>
         <!-- Chat -->
-        <a class="inline-flex items-center justify-center gap-2 whitespace-nowrap ink-0 hover:bg-accent hover:text-accent-foreground h-10 w-10" href="/chat">
+        <a class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 hover:bg-accent hover:text-accent-foreground h-10 w-10" href="/chat">
             <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
                 <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
             </svg>
