--- a/Neighborly/Views/Shared/Listings_layout.cshtml
+++ b/Neighborly/Views/Shared/Listings_layout.cshtml
@@ -197,6 +197,7 @@
             © 2025 Neighborly. Wszelkie prawa zastrzeżone.
         </footer>
     </div>
+        <script src="~/js/site.js"></script>
     </div>
 </body>
 </html>
